--- a/ui/mainWindow.ui
+++ b/ui/mainWindow.ui
@@ -132,7 +132,7 @@ border-radius:6px;</string>
       <x>10</x>
       <y>130</y>
       <width>431</width>
-      <height>151</height>
+      <height>191</height>
      </rect>
     </property>
     <property name="title">
@@ -255,9 +255,9 @@ border-radius: 6px;</string>
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>130</y>
+       <y>167</y>
        <width>41</width>
-       <height>16</height>
+       <height>20</height>
       </rect>
      </property>
      <property name="text">
@@ -268,9 +268,9 @@ border-radius: 6px;</string>
      <property name="geometry">
       <rect>
        <x>50</x>
-       <y>130</y>
-       <width>201</width>
-       <height>16</height>
+       <y>167</y>
+       <width>221</width>
+       <height>20</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -280,11 +280,11 @@ border-radius: 6px;</string>
       <string>Waiting...</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="btn_choose_dataset_2">
+    <widget class="QPushButton" name="btn_split_data">
      <property name="geometry">
       <rect>
        <x>333</x>
-       <y>120</y>
+       <y>160</y>
        <width>75</width>
        <height>26</height>
       </rect>
@@ -299,6 +299,134 @@ border-radius:6px;</string>
      </property>
      <property name="text">
       <string>Split data</string>
+     </property>
+    </widget>
+    <widget class="QWidget" name="widget" native="true">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>110</y>
+       <width>351</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <widget class="QRadioButton" name="rd_from_first">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>0</y>
+        <width>121</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>From first of data set</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_7">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>201</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>How do you want to choose training data:</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="rd_from_end">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>20</y>
+        <width>121</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>From end of data set</string>
+      </property>
+     </widget>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="grp_step3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>340</y>
+      <width>431</width>
+      <height>141</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Step 3 - Start Training</string>
+    </property>
+    <widget class="QLabel" name="lbl_training_amount">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>60</y>
+       <width>351</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lbl_all_amount">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>80</y>
+       <width>351</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btn_begin_train">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>110</y>
+       <width>75</width>
+       <height>26</height>
+      </rect>
+     </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color:#3498DB;
+color:#FFF;
+border-radius:6px;</string>
+     </property>
+     <property name="text">
+      <string>Start Training</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_6">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>30</y>
+       <width>351</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>If you are agree, Click on the Start Training,otherwise change your configuration:</string>
+     </property>
+     <property name="scaledContents">
+      <bool>false</bool>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
